force-app/main/default/objects/Project__c/fields/Budget_Used_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Budget_Used_to_Date__c</fullName>
    <inlineHelpText>Total Budget dollars consumed for 001 Service Codes</inlineHelpText>
    <label>Budget Used to Date</label>
    <summarizedField>Burn_Report__c.Billable_Amount_Time__c</summarizedField>
    <summaryFilterItems>
        <field>Burn_Report__c.Name</field>
        <operation>startsWith</operation>
        <value>BR-0014</value>
    </summaryFilterItems>
    <summaryForeignKey>Burn_Report__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>