force-app/main/default/objects/Project__c/fields/Hours_Used_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Hours_Used_to_Date__c</fullName>
    <inlineHelpText>Total hours used to date for 001 Service Codes</inlineHelpText>
    <label>Hours Used to Date</label>
    <summarizedField>Burn_Report__c.Total_Billable_Hours__c</summarizedField>
    <summaryFilterItems>
        <field>Burn_Report__c.Name</field>
        <operation>equals</operation>
        <value>BR-0014</value>
    </summaryFilterItems>
    <summaryForeignKey>Burn_Report__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>