force-app/main/default/objects/Project__c/fields/Number_of_Pending_Action_Items__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Pending_Action_Items__c</fullName>
    <inlineHelpText>Count of all Pending Action Items</inlineHelpText>
    <label>Pending Action Items</label>
    <summaryFilterItems>
        <field>Action_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>2 - Pending</value>
    </summaryFilterItems>
    <summaryForeignKey>Action_Item__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>