force-app/main/default/objects/Project__c/fields/Overall_Status__c.field-meta.xml
<CustomField>
    <fullName>Overall_Status__c</fullName>
    <inlineHelpText>To be set by Project Manager</inlineHelpText>
    <label>Overall Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Green - Progressing as planned; on schedule, no critical path/impacting issues identified.</fullName>
                <default>true</default>
                <label>Green - Progressing as planned; on schedule, no critical path/impacting issues identified.</label>
            </value>
            <value>
                <fullName>Yellow - Factors exist that threaten to impact the schedule.  The plan could be impacted if appropriate remediation is not agreed to by responsible parties within the stated timeframe.</fullName>
            </value>
            <value>
                <fullName>Red - Progress is being impacted.  Items require immediate remediation or resolution by the responsible parties within the stated timeframes.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>