force-app/main/default/objects/Project__c/fields/Percent_Budget_Used_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Percent_Budget_Used_to_Date__c</fullName>
    <formula>Budget_Used_to_Date__c /  Project_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Budget Used to Date divided by Total Project Budget</inlineHelpText>
    <label>% Budget Used to Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>