force-app/main/default/objects/Project__c/fields/Percent_Hours_Used_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Percent_Hours_Used_to_Date__c</fullName>
    <formula>Hours_Used_to_Date__c / Total_Project_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Hours Used to Date divided by Total Project Hours</inlineHelpText>
    <label>% Hours Used to Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>