force-app/main/default/objects/Project__c/fields/Project_Budget__c.field-meta.xml
<CustomField>
    <fullName>Project_Budget__c</fullName>
    <inlineHelpText>Total budget for project from Service Code 001</inlineHelpText>
    <label>Project Budget</label>
    <summarizedField>Burn_Report__c.Budgeted_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Burn_Report__c.Name</field>
        <operation>startsWith</operation>
        <value>BR-0014</value>
    </summaryFilterItems>
    <summaryForeignKey>Burn_Report__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>