force-app/main/default/objects/Project__c/fields/Status_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Status_Indicator__c</fullName>
    <formula>IMAGE( 
CASE(LEFT(TEXT(Overall_Status__c), 1) , 
 &quot;G&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;Y&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;R&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;Priority Flag&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Indicator</label>
    <type>Text</type>
</CustomField>