force-app/main/default/objects/Project__c/fields/Topics_for_Status_Meetings__c.field-meta.xml
<CustomField>
    <fullName>Topics_for_Status_Meetings__c</fullName>
    <label>Topics for Status Meetings</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>