force-app/main/default/objects/Project__c/fields/Total_Closed__c.field-meta.xml
<CustomField>
    <fullName>Total_Closed__c</fullName>
    <formula>Number_of_Closed_Action_Items__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total of all Closed Action Items</inlineHelpText>
    <label>Total Closed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>