force-app/main/default/objects/Project__c/fields/Total_Open__c.field-meta.xml
<CustomField>
    <fullName>Total_Open__c</fullName>
    <formula>Number_of_Open_Action_Items__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total of all Open Action Items</inlineHelpText>
    <label>Total Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>