force-app/main/default/objects/Project__c/fields/Total_Pending__c.field-meta.xml
<CustomField>
    <fullName>Total_Pending__c</fullName>
    <formula>Number_of_Pending_Action_Items__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total of all Pending Action Items</inlineHelpText>
    <label>Total Pending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>