force-app/main/default/objects/Project__c/fields/Total_Project_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Project_Hours__c</fullName>
    <inlineHelpText>Summary of Burn Report hours for 001 Service Codes</inlineHelpText>
    <label>Total Project Hours</label>
    <summarizedField>Burn_Report__c.Budgeted_Hours__c</summarizedField>
    <summaryFilterItems>
        <field>Burn_Report__c.Name</field>
        <operation>equals</operation>
        <value>BR-0014</value>
    </summaryFilterItems>
    <summaryForeignKey>Burn_Report__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>