force-app/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>AllRWSPublicGroup</group>
    </sharedTo>
</ListView>